--- a/notebooks/preparation/22_routes_from_gtfs.ipynb
+++ b/notebooks/preparation/22_routes_from_gtfs.ipynb
@@ -543,9 +543,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-quetzal_env]",
+   "display_name": "Python [conda env:Anaconda3-quetzal_env]",
    "language": "python",
-   "name": "conda-env-anaconda3-quetzal_env-py"
+   "name": "conda-env-Anaconda3-quetzal_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -557,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
