comp. new Quetzal, parameters.xlsx clean

--- a/notebooks/transport/0_python_launcher.ipynb
+++ b/notebooks/transport/0_python_launcher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "parameter_frame = pd.read_csv(r'../../inputs/parameters.csv', sep=';', decimal=',').set_index(['category','parameter'])\n",
+    "parameter_frame = pd.read_excel(r'../../inputs/parametros.xlsx').set_index(['category','parameter'])\n",
     "scenario_list = list(parameter_frame.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "['ref_18', 'ambicioso_sitp_30']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -75,7 +75,7 @@
      "text": [
       "0 4_pt_pathfinder.py ref_18\n",
       "1 4_pt_pathfinder.py ambicioso_sitp_30\n",
-      "62 seconds\n"
+      "55 seconds\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
      "text": [
       "0 5_modal_split.py ref_18\n",
       "1 5_modal_split.py ambicioso_sitp_30\n",
-      "105 seconds\n"
+      "62 seconds\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +121,7 @@
      "text": [
       "0 61_stack.py ref_18\n",
       "1 61_stack.py ambicioso_sitp_30\n",
-      "56 seconds\n"
+      "26 seconds\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "text": [
       "0 7_maps.py ref_18\n",
       "1 7_maps.py ambicioso_sitp_30\n",
-      "84 seconds\n"
+      "53 seconds\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -171,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  7.35it/s]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.73it/s]\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +192,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-quetzal_env]",
+   "display_name": "Python 3.8.13 ('quetzal_sdo')",
    "language": "python",
-   "name": "conda-env-anaconda3-quetzal_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -206,7 +206,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0e627864a60cfef3fdb728f93d1fb15697359da2b2aae170813e5828996a5e66"
+   }
   }
  },
  "nbformat": 4,
