--- a/notebooks/transport/3_car_assignment.ipynb
+++ b/notebooks/transport/3_car_assignment.ipynb
@@ -23,7 +23,9 @@
     "import sys\n",
     "sys.path.insert(0, '../../../quetzal/')\n",
     "\n",
-    "from quetzal.model import stepmodel"
+    "from quetzal.model import stepmodel\n",
+    "\n",
+    "from quetzal.engine.pathfinder_utils import get_edge_path"
    ]
   },
   {
@@ -35,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "zones: 100%|███████████████████████████████████████████████████████████████████████████| 27/27 [00:07<00:00,  3.62it/s]\n"
+      "zones: 100%|██████████| 27/27 [00:08<00:00,  3.29it/s]          \n"
      ]
     }
    ],
@@ -52,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "zones: 100%|███████████████████████████████████████████████████████████████████████████| 29/29 [00:00<00:00, 96.02it/s]\n"
+      "zones: 100%|██████████| 4/4 [00:00<00:00, 61.06it/s]\n"
      ]
     }
    ],
@@ -335,19 +337,306 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm.step_road_pathfinder(all_or_nothing=True)"
+    "sm.step_road_pathfinder(method='aon')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.car_los['edge_path'] = sm.car_los['path'].apply(lambda x : get_edge_path(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl = sm.road_links.copy().sort_values('time')\n",
+    "rl = rl.drop('index', axis=1).reset_index()\n",
+    "rl = rl.groupby(['a','b']).first()\n",
+    "dict_road_links = rl[['index']].to_dict(orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_link_path(s):\n",
+    "    lp = []\n",
+    "    if s!=[]:\n",
+    "        s = s[1:-1]\n",
+    "        for element in s:\n",
+    "            lp.append(dict_road_links.get(element)['index'])\n",
+    "    return lp\n",
+    "\n",
+    "def get_ntlegs(s):\n",
+    "    nl=[]\n",
+    "    if s!=[]:\n",
+    "        nl = [s[0],s[-1]]\n",
+    "    return nl\n",
+    "\n",
+    "\n",
+    "sm.car_los['link_path'] = sm.car_los.edge_path.apply(lambda x : get_link_path(x))\n",
+    "sm.car_los['ntlegs'] = sm.car_los.edge_path.apply(lambda x : get_ntlegs(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>time</th>\n",
+       "      <th>path</th>\n",
+       "      <th>gtime</th>\n",
+       "      <th>edge_path</th>\n",
+       "      <th>link_path</th>\n",
+       "      <th>ntlegs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>[zone_1]</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>zone_10</td>\n",
+       "      <td>2251.946039</td>\n",
+       "      <td>[zone_1, osm_node_314912924, osm_node_31491292...</td>\n",
+       "      <td>2251.946039</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_31491...</td>\n",
+       "      <td>[154872, 24718, 24736, 24751, 24749, 158356, 1...</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_45958...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>zone_101</td>\n",
+       "      <td>6469.901396</td>\n",
+       "      <td>[zone_1, osm_node_314912924, osm_node_31491292...</td>\n",
+       "      <td>6469.901396</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_31491...</td>\n",
+       "      <td>[154872, 24718, 24736, 24751, 24749, 158356, 1...</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_19056...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>zone_102</td>\n",
+       "      <td>2894.034811</td>\n",
+       "      <td>[zone_1, osm_node_314912924, osm_node_31491292...</td>\n",
+       "      <td>2894.034811</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_31491...</td>\n",
+       "      <td>[154872, 24718, 24736, 24751, 24749, 158356, 1...</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_18647...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>zone_1</td>\n",
+       "      <td>zone_103</td>\n",
+       "      <td>2396.764418</td>\n",
+       "      <td>[zone_1, osm_node_314912924, osm_node_31491292...</td>\n",
+       "      <td>2396.764418</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_31491...</td>\n",
+       "      <td>[24721, 24723, 154849, 24694, 24774, 154933, 1...</td>\n",
+       "      <td>[(zone_1, osm_node_314912924), (osm_node_18647...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15620</th>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>zone_94</td>\n",
+       "      <td>1438.771561</td>\n",
+       "      <td>[zone_98, osm_node_1860627442, osm_node_240517...</td>\n",
+       "      <td>1438.771561</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "      <td>[218137, 218144, 89545, 89532, 89492, 89535, 2...</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15621</th>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>zone_95</td>\n",
+       "      <td>1730.705838</td>\n",
+       "      <td>[zone_98, osm_node_1860627442, osm_node_240517...</td>\n",
+       "      <td>1730.705838</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "      <td>[218137, 218144, 89545, 89532, 89492, 89535, 2...</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15622</th>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>zone_96</td>\n",
+       "      <td>2238.118784</td>\n",
+       "      <td>[zone_98, osm_node_1860627442, osm_node_240517...</td>\n",
+       "      <td>2238.118784</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "      <td>[218137, 218144, 89545, 89532, 89492, 89535, 2...</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15623</th>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>zone_97</td>\n",
+       "      <td>1158.495516</td>\n",
+       "      <td>[zone_98, osm_node_1860627442, osm_node_186062...</td>\n",
+       "      <td>1158.495516</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "      <td>[177084, 47549, 177073, 177076, 47541, 177065,...</td>\n",
+       "      <td>[(zone_98, osm_node_1860627442), (osm_node_186...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15624</th>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>zone_98</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>[zone_98]</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15625 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        origin destination         time  \\\n",
+       "0       zone_1      zone_1     0.000000   \n",
+       "1       zone_1     zone_10  2251.946039   \n",
+       "2       zone_1    zone_101  6469.901396   \n",
+       "3       zone_1    zone_102  2894.034811   \n",
+       "4       zone_1    zone_103  2396.764418   \n",
+       "...        ...         ...          ...   \n",
+       "15620  zone_98     zone_94  1438.771561   \n",
+       "15621  zone_98     zone_95  1730.705838   \n",
+       "15622  zone_98     zone_96  2238.118784   \n",
+       "15623  zone_98     zone_97  1158.495516   \n",
+       "15624  zone_98     zone_98     0.000000   \n",
+       "\n",
+       "                                                    path        gtime  \\\n",
+       "0                                               [zone_1]     0.000000   \n",
+       "1      [zone_1, osm_node_314912924, osm_node_31491292...  2251.946039   \n",
+       "2      [zone_1, osm_node_314912924, osm_node_31491292...  6469.901396   \n",
+       "3      [zone_1, osm_node_314912924, osm_node_31491292...  2894.034811   \n",
+       "4      [zone_1, osm_node_314912924, osm_node_31491292...  2396.764418   \n",
+       "...                                                  ...          ...   \n",
+       "15620  [zone_98, osm_node_1860627442, osm_node_240517...  1438.771561   \n",
+       "15621  [zone_98, osm_node_1860627442, osm_node_240517...  1730.705838   \n",
+       "15622  [zone_98, osm_node_1860627442, osm_node_240517...  2238.118784   \n",
+       "15623  [zone_98, osm_node_1860627442, osm_node_186062...  1158.495516   \n",
+       "15624                                          [zone_98]     0.000000   \n",
+       "\n",
+       "                                               edge_path  \\\n",
+       "0                                                     []   \n",
+       "1      [(zone_1, osm_node_314912924), (osm_node_31491...   \n",
+       "2      [(zone_1, osm_node_314912924), (osm_node_31491...   \n",
+       "3      [(zone_1, osm_node_314912924), (osm_node_31491...   \n",
+       "4      [(zone_1, osm_node_314912924), (osm_node_31491...   \n",
+       "...                                                  ...   \n",
+       "15620  [(zone_98, osm_node_1860627442), (osm_node_186...   \n",
+       "15621  [(zone_98, osm_node_1860627442), (osm_node_186...   \n",
+       "15622  [(zone_98, osm_node_1860627442), (osm_node_186...   \n",
+       "15623  [(zone_98, osm_node_1860627442), (osm_node_186...   \n",
+       "15624                                                 []   \n",
+       "\n",
+       "                                               link_path  \\\n",
+       "0                                                     []   \n",
+       "1      [154872, 24718, 24736, 24751, 24749, 158356, 1...   \n",
+       "2      [154872, 24718, 24736, 24751, 24749, 158356, 1...   \n",
+       "3      [154872, 24718, 24736, 24751, 24749, 158356, 1...   \n",
+       "4      [24721, 24723, 154849, 24694, 24774, 154933, 1...   \n",
+       "...                                                  ...   \n",
+       "15620  [218137, 218144, 89545, 89532, 89492, 89535, 2...   \n",
+       "15621  [218137, 218144, 89545, 89532, 89492, 89535, 2...   \n",
+       "15622  [218137, 218144, 89545, 89532, 89492, 89535, 2...   \n",
+       "15623  [177084, 47549, 177073, 177076, 47541, 177065,...   \n",
+       "15624                                                 []   \n",
+       "\n",
+       "                                                  ntlegs  \n",
+       "0                                                     []  \n",
+       "1      [(zone_1, osm_node_314912924), (osm_node_45958...  \n",
+       "2      [(zone_1, osm_node_314912924), (osm_node_19056...  \n",
+       "3      [(zone_1, osm_node_314912924), (osm_node_18647...  \n",
+       "4      [(zone_1, osm_node_314912924), (osm_node_18647...  \n",
+       "...                                                  ...  \n",
+       "15620  [(zone_98, osm_node_1860627442), (osm_node_186...  \n",
+       "15621  [(zone_98, osm_node_1860627442), (osm_node_186...  \n",
+       "15622  [(zone_98, osm_node_1860627442), (osm_node_186...  \n",
+       "15623  [(zone_98, osm_node_1860627442), (osm_node_186...  \n",
+       "15624                                                 []  \n",
+       "\n",
+       "[15625 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sm.car_los"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "car_los: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:09<00:00,  3.11it/s]\n"
+      "car_los: 100%|██████████| 29/29 [00:06<00:00,  4.52it/s]       \n"
      ]
     }
    ],
@@ -358,9 +647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:quetzal_env]",
+   "display_name": "Python 3.8.13 ('quetzal_sdo')",
    "language": "python",
-   "name": "conda-env-quetzal_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -372,7 +661,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0e627864a60cfef3fdb728f93d1fb15697359da2b2aae170813e5828996a5e66"
+   }
   }
  },
  "nbformat": 4,
