--- a/notebooks/transport/62_merge_stacks.ipynb
+++ b/notebooks/transport/62_merge_stacks.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "parameter_frame = pd.read_csv(quetzal_path + 'inputs/parameters.csv', sep=';', decimal=',').set_index(['category','parameter'])\n",
+    "    \n",
+    "parameter_frame = pd.read_excel(quetzal_path + r'inputs/parametros.xlsx').set_index(['category','parameter'])\n",
     "for c in parameter_frame.columns:\n",
     "    parent = parameter_frame[c][('general', 'parent')]\n",
     "    try:\n",
