--- a/notebooks/preparation/80_scenarios.ipynb
+++ b/notebooks/preparation/80_scenarios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "zones: 100%|███████████████████████████████████████████████████████████████████████████| 27/27 [00:05<00:00,  4.64it/s]\n"
+      "zones: 100%|██████████| 27/27 [00:00<00:00, 53.67it/s]\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameter_frame = pd.read_csv(input_path + 'parameters.csv', sep=';', decimal=',').set_index(['category','parameter'])"
+    "parameter_frame = pd.read_excel(input_path + r'parametros.xlsx').set_index(['category','parameter'])"
    ]
   },
   {
@@ -72,12 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameter_frame = pd.read_csv(input_path + 'parameters.csv', sep=';', decimal=',').set_index(['category','parameter'])\n",
-    "\n",
     "for c in parameter_frame.columns:\n",
     "    parent = parameter_frame[c][('general', 'parent')]\n",
     "    try:\n",
@@ -89,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "links: 100%|██████████████████████████████████████████████████████████████████████████| 27/27 [00:00<00:00, 482.10it/s]"
+      "zones: 100%|██████████| 27/27 [00:00<00:00, 900.00it/s]"
      ]
     },
     {
@@ -104,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "routes that belong to gtfs and not to parameters (will not be used):\n",
-      "{'Tele Oeste LA', 'Tele Oeste SDO', 'sitp_tiradentes', 'Tramo Alcarrizos L2', 'quentin', 'intrant', 'tramo SDO L2'}\n"
+      "{'quentin', 'Tele Oeste LA', 'sitp_tiradentes', 'intrant', 'Tramo Alcarrizos L2', 'tramo SDO L2', 'Tele Oeste SDO'}\n"
      ]
     },
     {
@@ -128,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AB_A-B_1', 'AB_A20B_1', 'AB_A20A_2', 'AB_A31_2', 'AB_A69_1', 'sitp_churchill', 'AB_A-B_2', 'AB_A69_2', 'sitp_tiradentes', 'sitp_venezuela', 'sitp_lincoln', 'sitp_defillo', 'victoria', 'AB_A11_2', 'AB_A20A_1', 'AB_A31_1', 'sitp_cdg_oeste', 'sitp_sabana_larga', 'sitp_josefa', 'AB_A20B_2', 'sanfelipe', '27_febrero', 'sitp_prolongacion_27', 'sitp_cdg_este', 'AB_A11_1', 'independencia', 'sitp_nunez', 'sitp_ortega'}\n"
+      "{'AB_A11_2', 'sitp_tiradentes', 'independencia', 'AB_A-B_2', 'sitp_sabana_larga', 'sanfelipe', 'AB_A11_1', '27_febrero', 'AB_A31_1', 'sitp_venezuela', 'sitp_nunez', 'AB_A20B_2', 'AB_A69_1', 'AB_A69_2', 'sitp_defillo', 'sitp_prolongacion_27', 'sitp_churchill', 'AB_A20A_2', 'victoria', 'sitp_josefa', 'AB_A31_2', 'sitp_cdg_oeste', 'sitp_ortega', 'AB_A20A_1', 'sitp_lincoln', 'sitp_cdg_este', 'AB_A-B_1', 'AB_A20B_1'}\n"
      ]
     }
    ],
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "jsons: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  2.85it/s]\n",
-      "jsons: 100%|█████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  4.29it/s]\n"
+      "jsons: 100%|██████████| 2/2 [00:00<00:00, 10.05it/s]\n",
+      "jsons: 100%|██████████| 2/2 [00:00<00:00, 10.36it/s]\n"
      ]
     }
    ],
@@ -203,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:quetzal_env]",
+   "display_name": "Python 3.8.13 ('quetzal_sdo')",
    "language": "python",
-   "name": "conda-env-quetzal_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +215,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0e627864a60cfef3fdb728f93d1fb15697359da2b2aae170813e5828996a5e66"
+   }
   }
  },
  "nbformat": 4,
