--- a/notebooks/preparation/80_scenarios.ipynb
+++ b/notebooks/preparation/80_scenarios.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQLalchemy is not installed. No support for SQL output.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "zones: 100%|██████████| 27/27 [00:00<00:00, 53.67it/s]\n"
+      "zones: 100%|██████████| 27/27 [00:00<00:00, 47.90it/s]       \n"
      ]
     }
    ],
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "zones: 100%|██████████| 27/27 [00:00<00:00, 900.00it/s]"
+      "nodes: 100%|██████████| 3/3 [00:00<00:00, 20.87it/s]"
      ]
     },
     {
@@ -102,7 +109,7 @@
      "output_type": "stream",
      "text": [
       "routes that belong to gtfs and not to parameters (will not be used):\n",
-      "{'quentin', 'Tele Oeste LA', 'sitp_tiradentes', 'intrant', 'Tramo Alcarrizos L2', 'tramo SDO L2', 'Tele Oeste SDO'}\n"
+      "{'tramo SDO L2', 'quentin', 'sitp_tiradentes', 'Tele Oeste SDO', 'intrant', 'Tramo Alcarrizos L2', 'Tele Oeste LA'}\n"
      ]
     },
     {
@@ -126,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AB_A11_2', 'sitp_tiradentes', 'independencia', 'AB_A-B_2', 'sitp_sabana_larga', 'sanfelipe', 'AB_A11_1', '27_febrero', 'AB_A31_1', 'sitp_venezuela', 'sitp_nunez', 'AB_A20B_2', 'AB_A69_1', 'AB_A69_2', 'sitp_defillo', 'sitp_prolongacion_27', 'sitp_churchill', 'AB_A20A_2', 'victoria', 'sitp_josefa', 'AB_A31_2', 'sitp_cdg_oeste', 'sitp_ortega', 'AB_A20A_1', 'sitp_lincoln', 'sitp_cdg_este', 'AB_A-B_1', 'AB_A20B_1'}\n"
+      "{'sitp_lincoln', 'independencia', 'AB_A20B_1', 'sitp_prolongacion_27', 'sitp_josefa', 'AB_A20A_2', 'sitp_churchill', '27_febrero', 'AB_A11_2', 'AB_A69_1', 'AB_A20B_2', 'AB_A11_1', 'AB_A-B_1', 'AB_A69_2', 'sitp_defillo', 'AB_A31_1', 'sitp_cdg_oeste', 'victoria', 'sitp_sabana_larga', 'AB_A31_2', 'sitp_venezuela', 'sitp_nunez', 'sanfelipe', 'AB_A-B_2', 'sitp_ortega', 'AB_A20A_1', 'sitp_tiradentes', 'sitp_cdg_este'}\n"
      ]
     }
    ],
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,15 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "jsons: 100%|██████████| 2/2 [00:00<00:00, 10.05it/s]\n",
-      "jsons: 100%|██████████| 2/2 [00:00<00:00, 10.36it/s]\n"
+      "jsons: 100%|██████████| 2/2 [00:00<00:00,  2.54it/s]\n",
+      "jsons: 100%|██████████| 2/2 [00:00<00:00,  2.41it/s]\n",
+      "jsons: 100%|██████████| 2/2 [00:00<00:00,  2.43it/s]\n",
+      "jsons: 100%|██████████| 2/2 [00:00<00:00,  2.44it/s]\n",
+      "jsons: 100%|██████████| 2/2 [00:00<00:00,  2.39it/s]\n"
      ]
     }
    ],
@@ -201,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('quetzal_sdo')",
+   "display_name": "Python 3.8.12 ('quetzal_env')",
    "language": "python",
    "name": "python3"
   },
@@ -215,11 +225,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0e627864a60cfef3fdb728f93d1fb15697359da2b2aae170813e5828996a5e66"
+    "hash": "63ed8d3682b3a3f883b3db9dd4a15374715afa9f25179090c3e8481b99e79868"
    }
   }
  },
