--- a/notebooks/transport/0_python_launcher.ipynb
+++ b/notebooks/transport/0_python_launcher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ref_18', 'ambicioso_sitp_30']"
+       "['ref_18', 'ambicioso_sitp_30', 'monomodal', 'intermodal', 'multimodal']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -75,7 +75,10 @@
      "text": [
       "0 4_pt_pathfinder.py ref_18\n",
       "1 4_pt_pathfinder.py ambicioso_sitp_30\n",
-      "55 seconds\n"
+      "2 4_pt_pathfinder.py monomodal\n",
+      "3 4_pt_pathfinder.py intermodal\n",
+      "4 4_pt_pathfinder.py multimodal\n",
+      "154 seconds\n"
      ]
     }
    ],
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +100,10 @@
      "text": [
       "0 5_modal_split.py ref_18\n",
       "1 5_modal_split.py ambicioso_sitp_30\n",
-      "62 seconds\n"
+      "2 5_modal_split.py monomodal\n",
+      "3 5_modal_split.py intermodal\n",
+      "4 5_modal_split.py multimodal\n",
+      "132 seconds\n"
      ]
     }
    ],
@@ -110,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +127,10 @@
      "text": [
       "0 61_stack.py ref_18\n",
       "1 61_stack.py ambicioso_sitp_30\n",
-      "26 seconds\n"
+      "2 61_stack.py monomodal\n",
+      "3 61_stack.py intermodal\n",
+      "4 61_stack.py multimodal\n",
+      "59 seconds\n"
      ]
     }
    ],
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -171,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.73it/s]\n"
+      "100%|██████████| 5/5 [00:01<00:00,  3.63it/s]\n"
      ]
     }
    ],
@@ -192,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('quetzal_sdo')",
+   "display_name": "Python 3.8.12 ('quetzal_env')",
    "language": "python",
    "name": "python3"
   },
@@ -206,11 +215,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0e627864a60cfef3fdb728f93d1fb15697359da2b2aae170813e5828996a5e66"
+    "hash": "63ed8d3682b3a3f883b3db9dd4a15374715afa9f25179090c3e8481b99e79868"
    }
   }
  },
