--- a/notebooks/transport/0_python_launcher.ipynb
+++ b/notebooks/transport/0_python_launcher.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "parallel_call_notebook('7_maps.ipynb', arg_list, workers=8)"
+    "#parallel_call_notebook('7_maps.ipynb', arg_list, workers=8)"
    ]
   },
   {
