--- a/notebooks/transport/0_python_launcher.ipynb
+++ b/notebooks/transport/0_python_launcher.ipynb
@@ -23,6 +23,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run 1_scenarios.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "scrolled": true
